Fixed the alignment of the Amazon logo

--- a/3. Lance Jasper Lopez/W2D4_Homework/css/app.css
+++ b/3. Lance Jasper Lopez/W2D4_Homework/css/app.css
@@ -1,6 +1,7 @@
 #comp-logo{
 	height: 50px;
 	width:125px;
+	margin-left: 30%;
 }
 #box1{
 	padding-top: 10px;
